--- a/src/App.css
+++ b/src/App.css
@@ -4,34 +4,11 @@
     height: 100%;
     min-height: 40rem;
     position: relative;
-    -webkit-transition: opacity 1.5s linear;
-    -moz-transition: opacity 1.5s linear;
-    transition: opacity 1.5s linear;
+    -webkit-transition: opacity 0.7s linear;
+    -moz-transition: opacity 0.7s linear;
+    transition: opacity 0.7s linear;
     z-index: 5;
 
-}
-.no-status-background {
-    background: linear-gradient(black, black);
-    height: 100%;
-    z-index: 1;
-}
-.ooo-background {
-    background-image: linear-gradient(350deg, rgba(245, 173, 97, 1) 0%, rgba(245, 173, 97, 1) 0%, rgba(228, 109, 111, 1) 51%, rgba(193, 34, 92, 1) 100%, rgba(193, 34, 92, 1) 100%);
-    opacity: 0;
-    height: 100%;
-    z-index: -1;
-}
-.wfh-background {
-    background-image: linear-gradient(100deg, rgba(165, 78, 138, 1) 0%, rgba(165, 78, 138, 1) 0%, rgba(128, 78, 147, 1) 53%, rgba(96, 73, 145, 1) 100%, rgba(96, 73, 145, 1) 100%);
-    opacity: 0;
-    height: 100%;
-    z-index: -1;
-}
-.sick-background {
-    background-image: linear-gradient(100deg, rgba(53, 97, 134, 1) 0%, rgba(53, 97, 134, 1) 0%, rgba(65, 127, 148, 1) 51%, rgba(106, 191, 188, 1) 100%, rgba(106, 191, 188, 1) 100%);
-    opacity: 0;
-    height: 100%;
-    z-index: -1;
 }
 .ant-carousel{
     text-align: center;
@@ -106,4 +83,13 @@ hr {
     background: #fff;
     opacity: 1;
     width: 24px;
+}
+.loading-icon {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 40px;
+    color: black;
+    z-index: 100;
 }
