--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 .ant-carousel{
     text-align: center;
     overflow: hidden;
-    height: 80%;
+    height: calc( 80% - 20px);
 }
 .slick-slider {
     height: 100%;
