--- a/src/Home/StatusScreen/status-screen.css
+++ b/src/Home/StatusScreen/status-screen.css
@@ -5,17 +5,54 @@
     max-width: 40rem;
     cursor: pointer;
 }
+.status-button span {
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    top: 50%;
+    left: 50%;
+    /*border-radius: 50%;*/
+    /*background-color: #624670;*/
+    background-color: white;
+    -webkit-transition: width 0.4s ease-in-out, height 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out, height 0.4s ease-in-out;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    z-index: -1;
+
+}
+.even-button span{
+    border-radius: 50px 0 0 50px;
+}
+.odd-button span{
+    border-radius: 0 50px 50px 0  ;
+}
 @media only screen and (min-width : 40rem) {
     .status-button {
         margin-right: auto;
         margin-left: auto;
+        border-radius: 0 0 0 0 !important;
+    }
+    .even-button span{
+        border-radius: 0 0 0 0 !important;
+    }
+    .odd-button span{
+        border-radius: 0 0 0 0 !important;
     }
 }
 @media only screen and (max-width : 40rem) {
     .even-button {
         margin-left: auto;
         margin-right: 0;
+
     }
+}
+.even-button {
+    border-radius: 50px 0 0 50px;
+}
+.odd-button {
+    border-radius: 0 50px 50px 0  ;
 }
 .status-div {
     height: 100%;
