remove reports added
-remove reports added
-subscription not mandatory

--- a/src/Home/DateTimePicker/date-time-picker.css
+++ b/src/Home/DateTimePicker/date-time-picker.css
@@ -82,7 +82,7 @@
     margin-left: 2rem;
 }
 .date-title {
-    font-size: 1.5rem;
+    font-size: 23px;
     font-weight: 700;
     color: white;
     background-color: black;
