--- a/src/Home/Footer/footer.css
+++ b/src/Home/Footer/footer.css
@@ -9,9 +9,9 @@
     position: relative;
 }
 .bottom-button {
-    height: 60px;
+    height: 50px;
     width: 60%;
-    font-size: 2rem;
+    font-size: 27px;
     font-weight: 800;
     border-width: 3px;
     border-style: solid;
