--- a/src/Settings/WaitAuthScreen/wait-auth.css
+++ b/src/Settings/WaitAuthScreen/wait-auth.css
@@ -4,7 +4,7 @@
     margin: auto;
 }
 .wait-text {
-    font-size: 37px;
+    font-size: 33px;
     font-weight: 900;
     color: white;
     margin: 70px auto auto auto;
@@ -20,7 +20,7 @@
     height: 60px;
     width: 60%;
     min-width: 17rem;
-    font-size: 1.8rem;
+    font-size: 27px;
     font-weight: 800;
     border: 3px white solid;
     max-width: 33rem;
@@ -28,4 +28,5 @@
     text-align: center;
     color: white;
     margin: 80px auto auto auto;
+    position: relative;
 }
