--- a/src/Home/point-to-login.css
+++ b/src/Home/point-to-login.css
@@ -50,8 +50,7 @@
 .arrow-bounce {
     position: absolute;
     top: 10%;
-    left: 95%;
-    margin-left: -10px;
+    right: 3px;
     width: 40px;
     height: 40px;
     font-size: 35px;
