--- a/src/Settings/WaitAuthScreen/wait-auth.css
+++ b/src/Settings/WaitAuthScreen/wait-auth.css
@@ -30,3 +30,29 @@
     margin: 80px auto auto auto;
     position: relative;
 }
+@keyframes blink {
+    0% {
+        opacity: .2;
+    }
+    20% {
+        opacity: 1;
+    }
+    100% {
+        opacity: .2;
+    }
+}
+
+.wait-text > span {
+    animation-name: blink;
+    animation-duration: 1.4s;
+    animation-iteration-count: infinite;
+    animation-fill-mode: both;
+}
+
+.wait-text > span:nth-child(2) {
+    animation-delay: .2s;
+}
+
+.wait-text > span:nth-child(3) {
+    animation-delay: .4s;
+}
