--- a/src/WhereInfo/where-info.css
+++ b/src/WhereInfo/where-info.css
@@ -1,30 +1,45 @@
+.where-info {
+    background-color: rgba(36, 36, 36, 1);
+    /*height: 100%;*/
+
+}
+.title-where-text {
+    color: white;
+    font-size: 25px;
+    font-weight: 800;
+    margin: auto;
+    text-align: center;
+}
 .status-where {
-    height: 30%;
+    height: 170px;
 }
 .status-where-title {
-    font-size: 3.5vh;
+    font-size: 27px;
     color: white;
-    padding:8px;
+    padding: 8px;
     font-weight: 800;
     border-radius: 20px;
-    height: 30%;
+    /* height: 30%; */
     position: relative;
+    margin: auto;
+
 }
 .name {
     color: white;
-    font-size: 2.7vh;
+    font-size: 20px;
     font-weight: 800;
     height: 25%;
+    position: relative;
+    margin-left: 20px;
+    margin-bottom: 0;
+
 }
 .people-wrapper {
-    position: relative;
+    /*position: relative;*/
     height: 70%;
     overflow-y: auto;
 ;
 
-}
-.where-info {
-    height: 100%;
 }
 .status-where-img {
     /*margin-left: 50px;*/
@@ -32,4 +47,17 @@
 .span-img {
     position: absolute;
     right: 20px;
+}
+.day-button {
+    color:white;
+    margin: auto;
+    width: 40%;
+    border: 3px solid white;
+    position: relative;
+    height: 50px;
+    font-size: 24px;
+    font-weight: 800;
+    max-width: 33rem;
+    cursor: pointer;
+    text-align: center;
 }
