--- a/src/Settings/settings.css
+++ b/src/Settings/settings.css
@@ -1,6 +1,6 @@
 .settings {
     /*background-color: rgba(242, 242, 242, 1);*/
-    background-color: rgba(36, 36, 36, 1);
+    background-color: #404040;
     height: 100%;
     min-height: 420px;
     overflow-y: auto;
