--- a/src/WhereInfo/where-info.css
+++ b/src/WhereInfo/where-info.css
@@ -1,7 +1,17 @@
 .where-info {
-    background-color: rgba(36, 36, 36, 1);
-    /*height: 100%;*/
 
+    height: 100%;
+
+    margin: auto;
+    position: relative;
+
+}
+.where-wrapper {
+    background-color: rgba(36, 36, 36, 1);
+    height: 100%;
+    min-height: 35rem;
+    max-width: 33rem;
+    max-height: 70rem;
 }
 .title-where-text {
     color: white;
@@ -9,14 +19,18 @@
     font-weight: 800;
     margin: auto;
     text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .status-where {
-    height: 170px;
+    margin-bottom: 10px;
+
 }
 .status-where-title {
-    font-size: 27px;
+    font-size: 22px;
     color: white;
-    padding: 8px;
+    padding: 4px;
+    padding-left: 20px;
     font-weight: 800;
     border-radius: 20px;
     /* height: 30%; */
@@ -35,11 +49,8 @@
 
 }
 .people-wrapper {
-    /*position: relative;*/
-    height: 70%;
     overflow-y: auto;
-;
-
+    max-height: 109px;
 }
 .status-where-img {
     /*margin-left: 50px;*/
@@ -53,11 +64,30 @@
     margin: auto;
     width: 40%;
     border: 3px solid white;
-    position: relative;
     height: 50px;
     font-size: 24px;
     font-weight: 800;
     max-width: 33rem;
     cursor: pointer;
     text-align: center;
+
+}
+.bottom-button-wrapper {
+    position: absolute;
+    bottom: 15px;
+    width: 100%;
+}
+.day-button-clicked {
+    /*color:white;*/
+    margin: auto;
+    width: 40%;
+    border: 3px solid white;
+    height: 50px;
+    font-size: 24px;
+    font-weight: 800;
+    max-width: 33rem;
+    cursor: pointer;
+    text-align: center;
+    background-color: white;
+    color: rgb(31,31,31);
 }
