--- a/src/WhereInfo/where-info.css
+++ b/src/WhereInfo/where-info.css
@@ -4,14 +4,15 @@
 
     margin: auto;
     position: relative;
+    /* margin: auto; */
+    min-height: 35rem;
+    max-width: 33rem;
+    max-height: 70rem;
 
 }
 .where-wrapper {
     background-color: rgba(36, 36, 36, 1);
     height: 100%;
-    min-height: 35rem;
-    max-width: 33rem;
-    max-height: 70rem;
 }
 .title-where-text {
     color: white;
