--- a/src/Home/Footer/footer.css
+++ b/src/Home/Footer/footer.css
@@ -1,40 +1,34 @@
 .footer {
     height: 10%;
+    position: absolute;
+    bottom: 12px;
+    left:50%;
+    transform: translate(-50%, 0);
+    width: 100%;
 }
 .next-button {
     color:white;
     margin: auto;
     border-color: white;
     position: relative;
+    
 }
 .bottom-button {
 
-    width: fit-content;
+    width: 60%;
     padding: 2px 25px 2px 25px;
     text-align: center;
-    font-size: 25px;
-    font-weight: 800;
+    font-size: 29px;
+    font-weight: 700;
+    font-family: 'Amatic SC', cursive;
     border-width: 3px;
     border-style: solid;
-    min-width: 60%;
-    /*max-width: 80%;*/
-    cursor: pointer;
-}
-.next-button span {
-    position: absolute;
-    display: block;
-    width: 0;
-    height: 0;
+    border-radius: 10px;
+    min-width: 300px;
+    position: relative;
     top: 50%;
-    left: 50%;
-    /*border-radius: 50%;*/
-    /*background-color: #624670;*/
-    background-color: ghostwhite;
-    -webkit-transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
-    transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    z-index: -1;
+    cursor: pointer;
+    transform: translate(0,-50%);
 }
 .footer-img {
     position: relative;
