--- a/src/Home/Header/header.css
+++ b/src/Home/Header/header.css
@@ -9,18 +9,54 @@
     padding-right: 10px;
     padding-bottom: 10px;
     position: absolute;
+    top:10px;
+    left:10px;
     z-index: 5;
     width: 40px;
     height: 40px;
 }
+.prev-arrow {
+    width: 20px;
+    height: 20px;
+    border-width: 4px 4px 0 0;
+    border-style: solid;
+    margin: 10px;
+    top:15px;
+    /* transform: rotate(-135deg); */
+    left:15px;
+    color: white;
+    right: 0;
+    z-index: 3;
+  /* top: -3px; */
+  position: absolute;
+  /* height: 4px; */
+  /* box-shadow: inset 0 0 0 32px; */
+  transform: rotate(-135deg);   
+}
+.prev-arrow:before {
+    right: 0;
+    top: -3px;
+    position: absolute;
+    height: 4px;
+    box-shadow: inset 0 0 0 32px;
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    width: 23px;
+    -webkit-transform-origin: right top;
+            transform-origin: right top;
+    content: "";
+  }
 .header {
-    display: -webkit-box;
-    height: 10%;
+    /* display: -webkit-box;*/
+    height: 60px; 
     position: relative;
+    padding-bottom:10px;
+    /* max-height: 200px; */
 }
 .title-font-style {
-    font-size: 27px;
-    font-weight: 900;
+    font-size: 35px;
+    font-weight: 700;
+    font-family: 'Amatic SC', cursive;
     color: white;
     margin: auto;
 }
@@ -32,4 +68,7 @@
     right: 7px;
     top: 7px;
     z-index: 11;
+}
+.header-text {
+    position: relative;
 }
