--- a/src/Home/StatusScreen/status-screen.css
+++ b/src/Home/StatusScreen/status-screen.css
@@ -1,44 +1,27 @@
 .status-button {
-    width: 90%;
-    height: 30%;
-    position: relative;
-    max-width: 40rem;
-    cursor: pointer;
-}
-.status-button span {
     position: absolute;
-    display: block;
-    width: 0;
-    height: 0;
     top: 50%;
     left: 50%;
-    /*border-radius: 50%;*/
-    /*background-color: #624670;*/
-    background-color: white;
-    -webkit-transition: width 0.2s linear, height 0.2s linear;
-    transition: width 0.2s linear, height 0.2s linear;
-    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    z-index: -1;
-
+    width: 100%;
+    height: 100%;
+    
+    border-radius: 15px;
+    
 }
-.even-button span{
-    border-radius: 50px 0 0 50px;
-}
-.odd-button span{
-    border-radius: 0 50px 50px 0  ;
+.status-wrapper {
+    width: 100%;
+    position: relative;
+    cursor: pointer;
+    height: 38%;
+    border-width: 10px;
+    border-color: black;
+    border-style: solid;
 }
 @media only screen and (min-width : 40rem) {
     .status-button {
         margin-right: auto;
         margin-left: auto;
-        border-radius: 0 0 0 0 !important;
-    }
-    .even-button span{
-        border-radius: 0 0 0 0 !important;
-    }
-    .odd-button span{
-        border-radius: 0 0 0 0 !important;
     }
 }
 @media only screen and (max-width : 40rem) {
@@ -55,12 +38,15 @@
     border-radius: 0 50px 50px 0  ;
 }
 .status-div {
-    height: 100%;
+    
     display: flex;
     flex-direction: column;
-    font-size: 27px;
-    font-weight: 800;
+    font-size: 35px;
+    font-weight: 700;
     color: white;
+    font-family: 'Amatic SC', cursive;    
+    z-index: 2;
+    
 }
 
 .status-title {
@@ -68,11 +54,8 @@
 }
 .text-div {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    width: 50%;
-    height: 30%;
-    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
 }
