--- a/src/Home/SubmitScreen/submit-screen.css
+++ b/src/Home/SubmitScreen/submit-screen.css
@@ -1,37 +1,39 @@
 .caption {
-    position: absolute;
-    top: 55%;
-    left: 50%;
     color: white;
-    transform: translate(-50%,-50%);
-    font-size: 27px;
-    font-weight: 900;
+    font-size: 24px;
+    font-weight: 700;
     width: 100%;
+    
+    padding-bottom: 50px;
+    padding-top: 50px;
 }
 .caption-img {
-    position: absolute;
-    top: 78%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     font-size: 43px;
     color: white;
+    padding-bottom: 70px;
+    /* padding-top: 20px; */
 }
 .submit-screen {
-    position: relative;
-    height: 85%;
+    opacity: 0;
+    z-index: 1;
+    padding-top: 30px;
+    font-family: 'Amatic SC', cursive;
+}
+.repeat-options {
+    padding-top: 40px;
+    padding-bottom: 30px;
+    font-size: 28px;
+    color:white;
 }
 
 .add-note {
     color: black;
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    border-color: black;
-    transition: width 0.6s linear 0.1s;
-}
-.add-note:focus {
-    width: 80%;
+    border: 1.5px solid white;
+    padding: 7px 25px 7px 25px;
+    border-radius: 10px;
+    width: 230px;
+    font-size: 27px;
+    color: wheat;
 }
 
 input {
@@ -40,29 +42,75 @@ input {
     border: 0;
     text-align: center;
     font-weight: 800;
+    font-family: 'Amatic SC', cursive;
 }
 input:focus {
     outline-width: 0;
 }
-.wf-option-wrapper {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-}
-.wf-option {
-    color: white;
-    border: white 3px solid;
-    font-size: 22px;
-    font-weight: 800;
-    width: 100px;
-    margin: 5px;
 
-}
 .button-row {
     margin: auto;
 }
-.wf-option-clicked {
-    background-color: white;
-    color: rgba(165, 78, 138, 1);
+.slick-slider {
+    height: 150px;
+    font-size: 38px;
+    width: calc(100% - 30px);
+    margin: auto;
+    margin-bottom: 80px;
+    color: white;
+}
+.slick-prev {
+    left:-5px;
+    z-index: 2;
+}
+.slick-next {
+    right:-5px;
+    z-index: 2;
+}
+.slick-list {
+    z-index: 1;
+}
+.arrow-wrapper {
+    position: relative;
+    
+}
+.arrow-freestyle {
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    margin: auto;
+    top: -55px;
+    left:calc(50% - 22.5px);
+    font-size: 45px;
+    z-index: 10;
+    color: white;
+}
+.slick-slide {
+    transform: scale(0.8);
+    opacity: 0.7;
+    transition: all 300ms ease;
+
+}
+.slick-center {
+    transform: scale(1.1);
+    opacity: 1;
+
+}
+.repeat-text-wrapper {
+    display: flex;
+    width: fit-content;
+    margin: auto;
+    height: 36px;
+}
+.input-weeks {
+    width: 27px;
+    border-bottom: 1.4px solid white;
+    margin-right: 7px;
+    margin-left: 7px;
+}
+.item-slider-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
