--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,3 +1,15 @@
+.app-body {
+    position: relative;
+    height: 90%;
+}
+.body-wrapper {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    max-width: 35rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
 .who-r-u-text {
     color: white;
     position: absolute;
@@ -15,6 +27,13 @@
     color:white;
     padding: 3px 3px 21px 10px;
     /*margin-left: 15px;*/
+}
+.notification-css-error {
+    background-color: #31312d;
+
+    font-weight: 700;
+    color:white;
+    padding: 3px 3px 10px 10px;
 }
 .notification-text {
     text-align: center;
