--- a/src/Settings/Admin/admin-settings.css
+++ b/src/Settings/Admin/admin-settings.css
@@ -5,7 +5,7 @@
     padding-top: 10px;
     padding-bottom: 3px;
     margin-bottom: 30px;
-    font-size: 18px;
+    font-size: 25px;
     font-weight: 700;
     border-bottom: 1px solid;
     padding-left: 8px;
@@ -16,7 +16,7 @@
     width: fit-content;
     padding-top: 10px;
     padding-bottom: 3px;
-    font-size: 13px;
+    font-size: 20px;
     font-weight: 700;
     padding-left: 8px;
     padding-right: 8px;
@@ -26,9 +26,10 @@
 }
 .admin-settings {
     background-color: #404040;
-    height: 100%;
+    /* height: 100v; */
     min-height: 630px;
     /*min-width: 330px;*/
+    font-family: 'Amatic SC', cursive;
 }
 .contents-wrapper {
     margin: auto;
@@ -38,13 +39,13 @@
     width:95%;
 }
 .member-row {
-    font-size: 11px;
     color: white;
 }
 .members-table {
     width: 100%;
     border-collapse: collapse;
-    overflow-y: auto;
+    overflow-y: hidden;
+    font-size: 18px;
 }
 .member-row > th {
     padding-top:5px;
@@ -76,7 +77,7 @@
     border: 1px white solid;
     color: white;
     background-color: red;
-    font-size: 13px;
+    font-size: 18px;
     font-weight: 700;
     width: fit-content;
     padding: 2px 10px 2px 10px
