--- a/src/Settings/UserHome/user-home.css
+++ b/src/Settings/UserHome/user-home.css
@@ -5,12 +5,13 @@
     max-width: 40rem;
     width:95%;
     margin: auto;
+    font-family: 'Amatic SC', cursive;
 }
 .full-name {
     color: white;
     text-align: center;
-    font-size: 30px;
-    font-weight: 800;
+    font-size: 35px;
+    font-weight: 700;
     text-overflow: ellipsis;
     display: block;
     overflow: hidden;
@@ -19,7 +20,7 @@
 .email {
     color: white;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: 800;
     text-overflow: ellipsis;
     display: block;
@@ -29,7 +30,7 @@
     color: grey;
     text-align: center;
     padding-top: 15px;
-    font-size: 18px;
+    font-size: 24px;
     font-weight: 800;
 }
 .user-option {
@@ -38,15 +39,16 @@
     height: 50px;
 }
 .logout-button {
-    border: 2px red solid;
-    color:red;
+    border: 1.8px red solid;
+    color:#ff5400;
     position: absolute;
-    right: 0;
+    right: 3px;
     top: 0;
-    font-size: 18px;
+    font-size: 25px;
     width: 100px;
     padding: 2px 5px 2px 5px;
     font-weight: 800;
+    border-radius: 10px;
     cursor: pointer;
 }
 .go-to-admin {
@@ -69,11 +71,11 @@
     margin-bottom: 1px;
 }
 .logout-img {
-    margin-left: 4px;
+    margin-left: 7px;
     margin-bottom: 1px;
 }
 .report {
-    font-size: 15px;
+    font-size: 20px;
     color: white;
 }
 .user-reports {
@@ -93,19 +95,9 @@
     cursor: pointer;
 }
 
-.fixed-wrapper {
-    position: fixed;
-    right: 50%;
-    transform: translate(50%);
-    width: 95%;
-    z-index: 2;
-    /*background: rgba(36, 36, 36, 1);*/
-    max-width: 40rem;
-}
-
 .table-wrapper {
-    padding-top: 248px;
     /*background: rgba(33, 33, 33, 0.95);*/
+    overflow: auto;
 }
 .location > img {
     position: relative;
