--- a/src/WhereInfo/where-info.css
+++ b/src/WhereInfo/where-info.css
@@ -43,17 +43,19 @@
 }
 .name {
     color: white;
-    font-size: 20px;
+    font-size: 28px;
     font-weight: 800;
     height: 25%;
     position: relative;
-    margin-left: 20px;
-    margin-bottom: 0;
+    margin-bottom: 2px; 
+    
 
 }
 .people-wrapper {
     overflow-y: auto;
-    max-height: 109px;
+    max-height: 150px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .status-where-img {
     /*margin-left: 50px;*/
