--- a/src/Settings/Login/login.css
+++ b/src/Settings/Login/login.css
@@ -14,6 +14,7 @@
     top: 15px;
     height: 25%;
 }
+
 .field-set-input {
     margin-top: 25px;
     border: 2px solid white;
@@ -23,9 +24,16 @@
     max-width: 33rem;
     font-size: 28px;
     border-radius: 10px;
-    
-
+    position: relative;
 }
+
+.pwd-visibility-icon {
+    position: absolute;
+    right: 10px;
+    top:50%;
+    transform: translateY(-50%);
+}
+
 .login-body {
     height: 60%;
 }
