--- a/src/Settings/Login/login.css
+++ b/src/Settings/Login/login.css
@@ -14,10 +14,17 @@
     top: 15px;
     height: 25%;
 }
+.forgot-pwd {
+    color: white;
+    margin-left: 50px;
+    width: fit-content;
 
+    margin-top: 7px;
+    font-size: 20px;
+}
 .field-set-input {
     margin-top: 25px;
-    border: 2px solid white;
+    border: 2px solid;
     width: 80%;
     margin-right: auto;
     margin-left: auto;
@@ -25,6 +32,8 @@
     font-size: 28px;
     border-radius: 10px;
     position: relative;
+    text-align: center;
+    transition: width 0.5s ease-in-out;
 }
 
 .pwd-visibility-icon {
@@ -88,15 +97,90 @@
     width: 80%;
     position: relative;
     height: 100px;
-    margin-top: 50px;
+    max-width: 33rem;
 }
 .bottom-buttons {
     height: calc( 15% - 75px );
-    margin-top: 0 !important;
+    margin-top: 30px ;
     
 }
 .clicked-button-style{
     background-color: white;
     color: black;
     border-color: black;
+}
+.ant-input {
+    /*border-color: transparent !important;*/
+    height: 100% !important;
+    box-shadow: none !important;
+    background-color: #404040 !important;
+    border: 2px white solid !important;
+    color: white !important;
+    font-family: 'Amatic SC', cursive;
+    min-width: 150px;
+    font-size: 22px !important;
+
+}
+.ant-input::placeholder {
+    color: white !important;
+}
+.ant-input:hover {
+    /*border-color: transparent !important;*/
+}
+.ant-input:focus {
+    /*border-color: transparent !important;*/
+    box-shadow: none !important;
+
+}
+.group-wrapper {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 33rem;
+    font-size: 28px;
+    position: relative;
+    text-align: center;
+}
+.ant-select-selection--single {
+    height: 100% !important;
+}
+.ant-select ul {
+    height: 100%;
+}
+.group-autocomplete {
+    margin-left: auto !important;
+    margin-right: auto !important;
+}
+.group-autocomplete:before {
+    font-family: 'Amatic SC', cursive;
+    content: "Group: ";
+    position: absolute;
+    left: -60px;
+    /*top: -3px;*/
+    font-size: 25px;
+    color: white;
+}
+.ant-select-dropdown {
+     box-shadow: none !important;
+     background-color: #404040 !important;
+     border: 2px white solid !important;
+     color: white !important;
+     font-family: 'Amatic SC', cursive;
+     font-size: 22px;
+     min-width: 150px;
+ }
+.ant-select-dropdown-menu-item {
+    box-shadow: none !important;
+    background-color: #404040 !important;
+    color: white !important;
+}
+.ant-select-dropdown-menu-item:focus {
+    box-shadow: none !important;
+    background-color: darkseagreen !important;
+    color: black !important;
+}
+.ant-select-dropdown-menu-item:hover {
+    box-shadow: none !important;
+    background-color: darkseagreen !important;
+    color: black !important;
 }
