--- a/src/WhereInfo/where-info.css
+++ b/src/WhereInfo/where-info.css
@@ -14,7 +14,7 @@
     background-color: rgba(36, 36, 36, 1);
     height: 100%;
     font-family: 'Amatic SC', cursive;
-    min-height:  550px;
+    min-height:  500px;
 }
 .title-where-text {
     color: white;
@@ -41,18 +41,18 @@
     margin: auto;
 
 }
-.name {
+.report-line {
     color: white;
     font-size: 27px;
     font-weight: 800;
     position: relative;
-    margin-bottom: 0px; 
-    
-
+    margin-bottom: 0px;
+    overflow-x: hidden;
+    height: 40px;
 }
 .people-wrapper {
     overflow-y: auto;
-    max-height: 105px;
+    /*max-height: 105px;*/
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -97,18 +97,18 @@
     font-weight: 700;
     border-radius: 10px;
 }
-@media screen and (min-height: 700px) {
-    .people-wrapper {
-        max-height: 138px;
-    }
-}
-@media screen and (min-height: 750px) {
-    .people-wrapper {
-        max-height: 154px;
-    }
-}
-@media screen and (min-height: 800px) {
-    .people-wrapper {
-        max-height: 171px;
-    }
-}
+/*@media screen and (min-height: 700px) {*/
+    /*.people-wrapper {*/
+        /*max-height: 138px;*/
+    /*}*/
+/*}*/
+/*@media screen and (min-height: 750px) {*/
+    /*.people-wrapper {*/
+        /*max-height: 154px;*/
+    /*}*/
+/*}*/
+/*@media screen and (min-height: 800px) {*/
+    /*.people-wrapper {*/
+        /*max-height: 171px;*/
+    /*}*/
+/*}*/
