--- a/src/Settings/UserHome/user-home.css
+++ b/src/Settings/UserHome/user-home.css
@@ -169,3 +169,16 @@
     height: 36px;
     cursor: pointer;
 }
+.send-email-cb > label:before {
+    /*position: relative;*/
+    left:-25px !important;
+}
+.send-email-cb {
+    width: 80%;
+    max-width: 33rem;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    left: 25px;
+
+}
