--- a/src/Settings/settings.css
+++ b/src/Settings/settings.css
@@ -1,7 +1,11 @@
 .settings {
     /*background-color: rgba(242, 242, 242, 1);*/
-    background-color: #404040;
     height: 100%;
     min-height: 420px;
     overflow-y: auto;
+    width: 100%;
+    max-width: 35rem;
+    position: relative;
+    margin: auto;
+    max-height: 70rem;
 }
